--- a/style.css
+++ b/style.css
@@ -123,6 +123,23 @@ body {font-family: Arial, Helvetica, sans-serif;}
   opacity: 0.9;
 }
 
+/* Special pill-button with grey background */
+.special-pill-button {
+  background-color: grey;
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
+  opacity: 0.9;
+}
+
+
+
 .user-message {
   background-color: #0b6ffd;
   border: none;
@@ -149,24 +166,16 @@ body {font-family: Arial, Helvetica, sans-serif;}
   opacity: 0.9;
 }
 
-.user-message {
-  background-color: #0b6ffd;
-  border: none;
-  color: white;
-  padding: 5px 10px;
-  text-align: right;
-  text-decoration: none;
-  display: inline-block;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 16px;
-  opacity: 0.9;
-}
-
 div.editable {
   overflow-y:auto;
   width: 550px;
   height: 400px;
   border: 1px solid #ccc;
   padding: 5px;
+}
+
+.codebox{
+  border: 1px solid;
+  background-color: black;
+  color: white;
 }
